# SporePrint

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  install.sh  setup.sh
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: _request_id_mw.py  auth.py  config.py  db.py  logging_config.py  main.py  mqtt.py  provision.py  settings_router.py  settings_service.py  system_actions.py
server/app/automation/: coverage.py  coverage_router.py  engine.py  models.py  router.py  service.py  smart_plugs.py  templates.py
server/app/builder/: hardware_guides.py  models.py  models_router.py  router.py  service.py
server/app/chambers/: models.py  router.py  service.py
server/app/cloud/: integrations_proxy.py  ota.py  router.py  service.py  signing.py
server/app/contamination/: library.py  models.py  router.py  service.py
server/app/cultures/: models.py  router.py  service.py
server/app/experiments/: models.py  router.py  service.py
server/app/hardware/: coredumps.py  discovery.py  ota_push.py  router.py  service.py
server/app/health/: router.py  service.py
server/app/integrations/: __init__.py  _actions.py  _base.py  _health_sweeper.py  _http_skeleton.py  _keystore.py  _registry.py  _settings_store.py
server/app/integrations/agrowtek/: __init__.py  driver.py
server/app/integrations/anden/: __init__.py  driver.py
server/app/integrations/aranet/: __init__.py  client.py  config.py  driver.py  models.py  poller.py  router.py
server/app/integrations/bios/: __init__.py  driver.py
server/app/integrations/fluence/: __init__.py  driver.py
server/app/integrations/fohse/: __init__.py  driver.py
server/app/integrations/grafana/: __init__.py  config.py  driver.py  exporter.py  router.py
server/app/integrations/kasa/: __init__.py  (+1 more)
server/app/labels/: router.py
server/app/notifications/: service.py
server/app/planner/: ical.py  models.py  router.py  service.py
server/app/retention/: service.py
server/app/sessions/: lifecycle.py  models.py  router.py  service.py
server/app/species/: models.py  profiles.py  router.py  service.py  shopping.py  substrate.py  wizard.py
server/app/telemetry/: router.py  service.py
server/app/transcript/: router.py  service.py
server/app/vision/: router.py  service.py
server/app/weather/: prediction.py  providers.py  router.py  service.py
server/app/websocket/: events.py
server/tests/: conftest.py  test_actuator_coverage.py  test_actuator_events_ingest.py  test_alert_bands.py  test_api.py  test_auth_middleware.py  test_automation_channel_validation.py  test_automation_co2_gating.py  test_automation_coverage.py  test_automation_engine.py  test_automation_fire.py  test_automation_remote_hold.py  test_automation_routing.py  test_automation_safety_always_on.py  test_automation_scheduling.py  test_automation_service.py  test_calendar.py  test_chamber_lifecycle.py  test_chambers.py  test_cloud.py  test_cloud_actuator_override.py  test_cloud_command_dispatch.py  test_cloud_integrations_proxy.py  test_cloud_rule_id_contract.py  test_cloud_signing.py  test_cloud_subscription_refusal.py  test_co2_emergency_threshold.py  test_co2_gating.py  test_contamination.py  test_contamination_events.py  test_cultures.py  test_docker.py  test_drying.py  test_experiments.py  test_firmware_v2_consumers.py  test_firmware_wire_contract.py  test_flush_cycle.py  test_flush_lifecycle.py  test_hardware_discovery.py  test_health.py  (+49 more)
server/tests/fixtures/: signing_vectors.json
(+214 files in other folders)
