[project]
name = "sporeprint-server"
version = "3.1.13"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "aiosqlite>=0.20",
    "aiomqtt>=2.0",
    "python-socketio>=5.11",
    "anthropic>=0.40",
    "httpx>=0.27",
    "pillow>=10.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-multipart>=0.0.6",
    "psutil>=5.9",
    "qrcode[pil]>=7.4",
    "icalendar>=5.0",
]

[project.optional-dependencies]
vision = ["tflite-runtime", "onnxruntime", "numpy", "opencv-python-headless"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
