[project]
name = "sporeprint-server"
version = "3.4.10"
requires-python = ">=3.11"
dependencies = [
    # v3.4.9 — cap-only pins matching cloud/pyproject.toml policy (L-3).
    # Floor is the tested minimum; ceiling is the next known-breaking
    # major. A future FastAPI 1.x or Pydantic 3.x cannot land silently on
    # `pip install -U` without a deliberate cap bump + test run.
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "aiosqlite>=0.20,<1.0",
    "aiomqtt>=2.0,<3.0",
    "python-socketio>=5.11,<6.0",
    "anthropic>=0.40,<1.0",
    "httpx>=0.27,<1.0",
    "pillow>=10.0,<12.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "python-multipart>=0.0.18,<1.0",
    "psutil>=5.9,<8.0",
    "qrcode[pil]>=7.4,<9.0",
    "icalendar>=5.0,<7.0",
]

[project.optional-dependencies]
vision = ["tflite-runtime", "onnxruntime", "numpy", "opencv-python-headless"]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
